--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -2386,8 +2386,7 @@
 
 - func: kl_div_backward(Tensor grad_output, Tensor self, Tensor target, int reduction=Mean, *, bool log_target=False) -> Tensor
   dispatch:
-    CPU: kl_div_backward_cpu
-    CUDA: kl_div_backward_cuda
+    CompositeExplicitAutograd: kl_div_backward_aux
 
 - func: kron(Tensor self, Tensor other) -> Tensor
   variants: function, method
